test/bad/obj_unknown_method.lat
class c {
    int a() {}
}
int main() {
    c obj = new c;
    obj.b();
    return 0;
}
